--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,35 @@
 1 NEWS
 ******
 
-The currently released version is '2.8.0'.
+The currently released version is '2.9.0'.
 
-1.1 Changes in version '2.8.0'
+1.1 Changes in version '2.9.0'
+==============================
+
+   * Better check for objc runtime on Windows.
+
+   * Split linker flags to better support partial linking: 'ALL_LDFLAGS'
+     is now a combination of 'FINAL_LDFLAGS' and 'ALL_LDFLAGS'.
+
+   * Better support for newer gcc versions.
+
+   * Add support for storyboard files.
+
+   * Increase autoconf version to 2.65 and make autoconf handle
+     Objective-C++ and OBJCXX variables directly.
+
+   * Fix bug that prevented ARC from getting used.
+
+   * Link subproject object files directly instead of first merging them
+     into 'subproject.o'.
+
+   * Support building on Windows with Clang MSVC target.
+
+   * Improve mingw64 support: for instance, adopt the triplet used by
+     the mingw-w64 project rather than using the one returned by
+     autoconf.  Fixes building Gorm.
+
+1.2 Changes in version '2.8.0'
 ==============================
 
    * Better library combo and ABI detection: gnustep-make will now
@@ -22,7 +48,7 @@ The currently released version is '2.8.0'.
 
    * Dropped legacy Rhapsody and FreeBSD-out support.
 
-1.2 Changes in version '2.7.0'
+1.3 Changes in version '2.7.0'
 ==============================
 
 Garbage collection support removed
@@ -36,7 +62,7 @@ compatible
 
    Various other minor bugfixes
 
-1.3 Changes in version '2.6.8'
+1.4 Changes in version '2.6.8'
 ==============================
 
 Configure option '-with-library-combo=ng-gnu-gnu' to use the 'Next
@@ -64,7 +90,7 @@ you update any old gnustep-make version one makefiles.
 
    Garbage collection support to be removed at the next release.
 
-1.4 Changes in version '2.6.7'
+1.5 Changes in version '2.6.7'
 ==============================
 
 Improved package building support
@@ -75,14 +101,14 @@ Improved package building support
 
    Various minor bugfixes, documentation spelling corrections etc.
 
-1.5 Changes in version '2.6.6'
+1.6 Changes in version '2.6.6'
 ==============================
 
 Debian packaging support
 
    Minor bugfixes.
 
-1.6 Changes in version '2.6.5'
+1.7 Changes in version '2.6.5'
 ==============================
 
 Bugfix for non-fragile ABI test
@@ -93,31 +119,31 @@ Bugfix for non-fragile ABI test
 
    Added minimal test support for .c and .cc files.
 
-1.7 Changes in version '2.6.4'
+1.8 Changes in version '2.6.4'
 ==============================
 
 Test framework extended equality tests.
 
    Android build target
 
-1.8 Changes in version '2.6.3'
+1.9 Changes in version '2.6.3'
 ==============================
 
 Minor bugfix release.
 
-1.9 Changes in version '2.6.2'
-==============================
+1.10 Changes in version '2.6.2'
+===============================
 
 Added standalone filesystem layout for putting everything in one
 directory for easy deployment of relocatable.  Other bug fixes.
 
-1.10 Changes in version '2.6.1'
+1.11 Changes in version '2.6.1'
 ===============================
 
 Bug fix release.  Most notably to fix a problem compiling GNUstep with
 clang.
 
-1.11 Changes in version '2.6.0'
+1.12 Changes in version '2.6.0'
 ===============================
 
    * The default filesystem layout is now the 'fhs' layout
@@ -130,7 +156,7 @@ clang.
    * objc.make deprecated.  Use tool.make instead
    * -enable-absolute-install-paths is now the default on Darwin
 
-1.12 Changes in version '2.4.0'
+1.13 Changes in version '2.4.0'
 ===============================
 
    * Add -enable-objc-nonfragile-abi flag
@@ -145,7 +171,7 @@ clang.
    * Renamed info files to prevent conflicts.
    * Updated cygwin support.
 
-1.13 Changes in version '2.2.0'
+1.14 Changes in version '2.2.0'
 ===============================
 
    * New -with-objc-lib-flag for specifying libobjc.
@@ -155,12 +181,12 @@ clang.
    * Use install -p if available.
    * make uninstall works better now.
 
-1.14 Changes in version '2.0.8'
+1.15 Changes in version '2.0.8'
 ===============================
 
 Minor bug fix to deal with installing in different domains
 
-1.15 Changes in version '2.0.7'
+1.16 Changes in version '2.0.7'
 ===============================
 
    * New configuration file to set default installation
@@ -170,14 +196,14 @@ Minor bug fix to deal with installing in different domains
    * Change in path checking algorithm in GNUstep.sh and GNUstep.csh
    * Test applications linked against gnustep-gui by default
 
-1.16 Changes in version '2.0.6'
+1.17 Changes in version '2.0.6'
 ===============================
 
    * Fixed some spurious rebuilds of plists, and framework headers.
    * Added the -enable-absolute-install-paths option for Darwin systems.
    * Install GNUstep.conf in /etc/GNUstep/GNUstep.conf on all systems.
 
-1.17 Changes in version '2.0.5'
+1.18 Changes in version '2.0.5'
 ===============================
 
    * Update C++ and ObjC++ support so that g++ and proper flags are
@@ -189,28 +215,28 @@ Minor bug fix to deal with installing in different domains
    * New option -enable-strict-v2-mode to test for obsolete variables.
    * ~/GNUstep/GNUstep.sh is no longer sourced.
 
-1.18 Changes in version '2.0.4'
+1.19 Changes in version '2.0.4'
 ===============================
 
 Fixed a bug finding relative paths on Windows (during configuration).
 
-1.19 Changes in version '2.0.3'
+1.20 Changes in version '2.0.3'
 ===============================
 
 New man pages for tools.  Better uninstallation of files Add Windows
 installer makefile for Applications.
 
-1.20 Changes in version '2.0.2'
+1.21 Changes in version '2.0.2'
 ===============================
 
 Update license to GPLv3.
 
-1.21 Changes in version '2.0.1'
+1.22 Changes in version '2.0.1'
 ===============================
 
 Bug fixes in filesystem layout and framework installation.
 
-1.22 Changes in version '2.0.0'
+1.23 Changes in version '2.0.0'
 ===============================
 
 The Makefile package has had a major makover which befits a major
@@ -265,7 +291,7 @@ with this version of make.
    * Versioning of library resources
    * Fixed rebuilding .plist and .palette files
 
-1.23 Changes in version '1.13.0'
+1.24 Changes in version '1.13.0'
 ================================
 
 Debug libraries now have the same name as normal libraries (i.e.  no
@@ -278,12 +304,12 @@ loaded into the same executable.
 make package (e.g.  with Windows OS). The libraries can still use native
 paths.
 
-1.24 Changes in version '1.12.0'
+1.25 Changes in version '1.12.0'
 ================================
 
 Minor fixes.
 
-1.25 Changes in version '1.11.2'
+1.26 Changes in version '1.11.2'
 ================================
 
 The 'GNUstep.conf' file is now viewed as the essential determination of
@@ -313,7 +339,7 @@ rules.
 files in the xxx_OBJCC_FILES variable, and put extra ObjC++ flags in
 xxx_OBJCCFLAGS or ADDITIONAL_OBJCCFLAGS.
 
-1.26 Changes in version '1.11.1'
+1.27 Changes in version '1.11.1'
 ================================
 
 Part of the previous change was reversed.  Now libobjc is still linked
@@ -324,7 +350,7 @@ there is no need to recompile all applications again.
    Compilation of GNUstep on cygwin was revampled and fixed due to a lot
 of work by Tom MacSween.
 
-1.27 Changes in version '1.11.0'
+1.28 Changes in version '1.11.0'
 ================================
 
 NOTE: The libobjc library is now linked in with the base library and NOT
@@ -346,7 +372,7 @@ switching to this new version.
 
    * Support for xxx_WINDRES_FILES on MinGW was implemented.
 
-1.28 Changes in version '1.10.0'
+1.29 Changes in version '1.10.0'
 ================================
 
    * a GNUsteprc file is now automatically created and installed in
@@ -362,27 +388,27 @@ switching to this new version.
      configure to enable use of built in objc exceptions with compilers
      that support it.
 
-1.29 Changes in version '1.9.2'
+1.30 Changes in version '1.9.2'
 ===============================
 
    * Application and Bundles use the latest convention on Apple.
    * Improve/Simplify dependency checking when making docs
 
-1.30 Changes in version '1.9.1'
+1.31 Changes in version '1.9.1'
 ===============================
 
    * Remove '--disable-import' option
    * README.Darwin for darwin/MacOSX install
    * Framework version and naming clarified.
 
-1.31 Changes in version '1.9.0'
+1.32 Changes in version '1.9.0'
 ===============================
 
    * Support for building in a separate build dir.
    * Add '--enable-strip-makefiles' option to configure
    * List of classes in a framework gets written to the plist file.
 
-1.32 Changes in version '1.8.0'
+1.33 Changes in version '1.8.0'
 ===============================
 
 Read the NEWS file for a complete list of changes since the last stable
@@ -391,18 +417,18 @@ certain directories have changed.  Generally this will not cause a
 problem unless your GNUstep directory is shared by multiple machines
 running this and earlier (1.6.x) versions of the software.
 
-1.33 Changes in version '1.7.4'
+1.34 Changes in version '1.7.4'
 ===============================
 
 Bug fixes.
 
-1.34 Changes in version '1.7.3'
+1.35 Changes in version '1.7.3'
 ===============================
 
    * Adds library combo to Headers directory if not flattened.
    * Add Markup file (Renaissance) support.
 
-1.35 Changes in version '1.7.2'
+1.36 Changes in version '1.7.2'
 ===============================
 
 -enable-flattened (Flat directory structure) is on by default.
@@ -410,12 +436,12 @@ Bug fixes.
    * On WIN32 use HOMEPATH in preference to USERPROFILE
    * netbsd and openbsd compile fixes.
 
-1.36 Changes in version '1.7.1'
+1.37 Changes in version '1.7.1'
 ===============================
 
 Bug fixes.
 
-1.37 Changes in version '1.7.0'
+1.38 Changes in version '1.7.0'
 ===============================
 
 This version contains a major change in the location of certain
@@ -430,7 +456,7 @@ incompatibilities.
 
    * Support for preprocessed Info.plists.
 
-1.38 Changes in version '1.6.0'
+1.39 Changes in version '1.6.0'
 ===============================
 
 Make now configures by default for only one system.  To compile and run
@@ -442,7 +468,7 @@ configure argument -enable-multi-platform.
      of nx-nx-nx on OSX systems.
    * More efficient checks for re-making a project.
 
-1.39 Changes in version '1.5.1'
+1.40 Changes in version '1.5.1'
 ===============================
 
    * Framework support rewritten, also supports multiple names.
@@ -455,17 +481,17 @@ configure argument -enable-multi-platform.
    * API change: Tools/Subproj can have resources.
    * API change: TOOL_INSTALL_DIR.
 
-1.40 Changes in version '1.5.0'
+1.41 Changes in version '1.5.0'
 ===============================
 
    * Add NetBSD Elf support
 
-1.41 Changes in version '1.4.0'
+1.42 Changes in version '1.4.0'
 ===============================
 
    * Update Darwin/GNU gcc and Irix targets
 
-1.42 Changes in version '1.3.4'
+1.43 Changes in version '1.3.4'
 ===============================
 
 This is a first prerelease version for 1.4.
@@ -475,13 +501,13 @@ This is a first prerelease version for 1.4.
    * Change GNUSTEP_PATHPREFIX_LIST to	GNUSTEP_PATHLIST
    * Add verbosity levels.  Use make messages=yes for full messages.
 
-1.43 Changes in version '1.3.3'
+1.44 Changes in version '1.3.3'
 ===============================
 
    * Recognizes XXX_STANDARD_INSTALL=no to not do installation.
    * Updated instructions for MingW/MSYS installation.
 
-1.44 Changes in version '1.3.2'
+1.45 Changes in version '1.3.2'
 ===============================
 
    * Instructions for building on Windows with MSYS
@@ -489,7 +515,7 @@ This is a first prerelease version for 1.4.
    * Fix frameworks in RPMs and DEBs
    * Continued reorganization.
 
-1.45 Changes in version '1.3.0'
+1.46 Changes in version '1.3.0'
 ===============================
 
 The package has gone through an extensive reorganization to break up
@@ -507,7 +533,7 @@ effect, it also increased the speed of the code by at least a factor of
    * Changed Apps directory to Applications
    * Fixes for MacOSX, MingW
 
-1.46 Changes in version '1.2.1'
+1.47 Changes in version '1.2.1'
 ===============================
 
    * the source distribution code has been rewritten to be more general
@@ -521,7 +547,7 @@ effect, it also increased the speed of the code by at least a factor of
    * implemented a strip=yes option.
    * various bug fixes and minor improvements.
 
-1.47 Changes in version '1.2.0'
+1.48 Changes in version '1.2.0'
 ===============================
 
    * The core rules and internals of gnustep-make have been
@@ -541,7 +567,7 @@ effect, it also increased the speed of the code by at least a factor of
      installation.
    * Much improved Windows path support
 
-1.48 Changes in version '1.0.1'
+1.49 Changes in version '1.0.1'
 ===============================
 
    * Support for Java tools.
@@ -549,7 +575,7 @@ effect, it also increased the speed of the code by at least a factor of
    * Remove backend part of LIBRARY_COMBO.
    * Fixes to run on FreeBSD, Solaris.
 
-1.49 Changes in version '1.0.0'
+1.50 Changes in version '1.0.0'
 ===============================
 
    * Optimizations that in many cases more than double the speed.
@@ -557,13 +583,13 @@ effect, it also increased the speed of the code by at least a factor of
    * rpm packeing improvements.
    * Better checking for mingw and cygwin
 
-1.50 Changes in version '0.9.2'
+1.51 Changes in version '0.9.2'
 ===============================
 
    * HOWTO and faq files moved from core package to here
    * Configurable GNUSTEP_LOCAL_ROOT and GNUSTEP_NETWORK_ROOT
 
-1.51 Changes in version '0.9.1'
+1.52 Changes in version '0.9.1'
 ===============================
 
 Make has been reoganized so that it only relies on libraries and other
@@ -576,7 +602,7 @@ simplifies compilation and packaging.
    * debian directory added for dpkg
    * RPM support rewritten from scratch.
 
-1.52 Changes in version '0.9.0'
+1.53 Changes in version '0.9.0'
 ===============================
 
 ffcall library is highly recommended for use with the GNUstep base
@@ -589,7 +615,7 @@ Makefile package.  See the INSTALL file.
    * LaText documentation support.
    * Added support for Frameworks
 
-1.53 Noteworthy changes in version '0.6.6'
+1.54 Noteworthy changes in version '0.6.6'
 ==========================================
 
 The GNUstep system libraries are now installed in a separate system root
