--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,7 +5,25 @@ The release notes include descriptions of API changes, behavior changes
 and other information that might help developers and users migrate to
 using a newer version of the make system.
 
-1.1 Version 2.8.0
+1.1 Version 2.9.0
+=================
+
+We have improved support for newer GCC versions (GCC9 and newer).
+
+   Building with ARC has been fixed.
+
+   We've added support for storyboard files in 'GNUmakefile's.
+
+   On Windows, we now support building with MSVC's Clang toolchain.
+
+   Subprojects' object files are now linked individually in their parent
+project, rather than being first linked into 'subproject.o'.
+
+   We have also changed the way 'OBJCXX' flags are handled, and
+increased the minimum version of autoconf used to 2.65.  (The
+regenerated 'configure' file will not handle runstatedir anymore.)
+
+1.2 Version 2.8.0
 =================
 
 We now include better library combo and ABI detection: gnustep-make will
@@ -25,7 +43,7 @@ targets.
 
    We have dropped legacy Rhapsody and FreeBSD-out support.
 
-1.2 Version 2.7.0
+1.3 Version 2.7.0
 =================
 
 When building non-flattened, the subdirectory name for
@@ -45,7 +63,7 @@ architecture specific subdirectory.
 
    Various bugfixes and minor improvements.
 
-1.3 Version 2.6.8
+1.4 Version 2.6.8
 =================
 
 Configure option '-with-library-combo=ng-gnu-gnu' to use the 'Next
@@ -73,7 +91,7 @@ you update any old gnustep-make version one makefiles.
 
    Garbage collection support to be removed at the next release.
 
-1.4 Version 2.6.7
+1.5 Version 2.6.7
 =================
 
 Improved package building support
@@ -84,14 +102,14 @@ Improved package building support
 
    Various minor bugfixes, documentation spelling corrections etc.
 
-1.5 Version 2.6.6
+1.6 Version 2.6.6
 =================
 
 Debian packagge generation support added.
 
    Bug fixes
 
-1.6 Version 2.6.5
+1.7 Version 2.6.5
 =================
 
 Bugfix for non-fragile ABI test
@@ -102,32 +120,32 @@ Bugfix for non-fragile ABI test
 
    Added minimal test support for .c and .cc files.
 
-1.7 Version 2.6.4
+1.8 Version 2.6.4
 =================
 
 Test framework enhancement (extended equality tests)
 
    Android build target
 
-1.8 Version 2.6.3
+1.9 Version 2.6.3
 =================
 
 Bug fixes
 
-1.9 Version 2.6.2
-=================
+1.10 Version 2.6.2
+==================
 
 'Added standalone filesystem layout for putting everything in'
      one directory for easy deployment of relocatable
 
 'Other bug fixes'
 
-1.10 Version 2.6.1
+1.11 Version 2.6.1
 ==================
 
 Bug fixes
 
-1.11 Version 2.6.0
+1.12 Version 2.6.0
 ==================
 
 'The default filesystem layout is now the 'fhs' layout'
@@ -204,7 +222,7 @@ Bug fixes
      This makes it easier to use GNUstep with the gnu-gnu-gnu library
      combo on Apple Mac OS X.
 
-1.12 Version 2.4.0
+1.13 Version 2.4.0
 ==================
 
 'You can enable the use of the non-fragile ivar ABI'
@@ -450,7 +468,7 @@ Bug fixes
      on all gnustep-make versions that support library resources (ie,
      gnustep-make >= 2.0.x).
 
-1.13 Version 2.2.0
+1.14 Version 2.2.0
 ==================
 
 'libobjc library'
@@ -475,7 +493,7 @@ Bug fixes
      resources, which means that 'make uninstall' will do a better job
      at removing directories that were created during by 'make install'.
 
-1.14 Version 2.0.7
+1.15 Version 2.0.7
 ==================
 
 'default installation'
@@ -516,7 +534,7 @@ Bug fixes
      test-application.make) are now linked against gnustep-gui by
      default.
 
-1.15 Version 2.0.6
+1.16 Version 2.0.6
 ==================
 
 'GNUSTEP_ABSOLUTE_INSTALL_PATHS'
@@ -543,7 +561,7 @@ Bug fixes
      the moment is not automatically installed unless you explicitly go
      in that subdirectory and install it.
 
-1.16 Version 2.0.5
+1.17 Version 2.0.5
 ==================
 
 'default filesystem layout on apple-apple-apple'
@@ -587,7 +605,7 @@ Bug fixes
      overridden for specific project targets by using the xxx_NEEDS_GUI
      variable (see above).
 
-1.17 Version 2.0.0
+1.18 Version 2.0.0
 ==================
 
 Version 2.0.0 is a new major release of gnustep-make which includes a
